Corrijo las importaciones que se rompieron por el cambio de modulos

--- a/src/app/components/products/products-list/products-list.component.html
+++ b/src/app/components/products/products-list/products-list.component.html
@@ -23,6 +23,5 @@
   </div>
 </div>
 <ng-template #loadingBlock>
-  Cargando...
-  <!-- <app-loading-block></app-loading-block> -->
+  <app-loading></app-loading>
 </ng-template>
