--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
-<router-outlet></router-outlet>
+<app-header-bar></app-header-bar>
+<div class="grid grid-flow-col">
+
+    <div class="">
+
+        <app-side-bar></app-side-bar>
+    </div>
+    <div class="grid-span-4">
+
+        <router-outlet></router-outlet>
+    </div>
+
+</div>
+<app-footer-bar></app-footer-bar>
